--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/cweigandt/widgets-app-build/issues"
   },
-  "homepage": "https://github.com/cweigandt/widgets-app-build#readme"
+  "homepage": "https://github.com/cweigandt/widgets-app-build#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  }
 }
